# Telecom_Campaign

./: LICENSE  Makefile  README.md  SetYouUp.ipynb  pyproject.toml  requirements.txt
Telecom_campaign/: __init__.py  dataset.py
docs/: AgamSinghSaini_ExploratoryDataAnalysis_02September2025.docx
notebooks/: AgamSinghSaini_ExploratoryDataAnalysis_01September2025.ipynb
